# Incredimaker

./: .gitignore  README.md  pyproject.toml
src/incredimaker/: __init__.py  cli.py  separator.py  webapp.py
src/incredimaker/web/: __init__.py
src/incredimaker/web/static/: app.css  app.js
src/incredimaker/web/templates/: index.html
